# msm8937-8953_qcom_vendor

SecProtect/: Android.mk
android-perf/app-trigger/: qti-app_trigger.c
android-perf/game_trigger/: Android.mk  qti-game_trigger.cpp
android-perf/io-p/: Android.mk  io-p.c
android-perf/mp-ctl/: Android.mk  OptsData.h  OptsHandler.cpp  OptsHandler.h  RestoreHandler.cpp  Target.cpp  Target.h  TargetInit.cpp  mp-ctl.h
bt/hci_qcomm_init/: btnvtool.cpp
common/config/: device-vendor.mk
common/msm8909/: BoardConfigVendor.mk
common/msm8937_32/: BoardConfigVendor.mk
common/msm8937_64/: BoardConfigVendor.mk
common/msm8952_64/: BoardConfigVendor.mk
common/msm8953_32/: BoardConfigVendor.mk
common/msm8953_64/: BoardConfigVendor.mk
common/msm8994/: BoardConfigVendor.mk
common/msm8996/: BoardConfigVendor.mk
common/msm8998/: BoardConfigVendor.mk
common/msm8998_32/: BoardConfigVendor.mk
common/msmfalcon_32/: BoardConfigVendor.mk
common/msmfalcon_64/: BoardConfigVendor.mk
common/msmskunk/: BoardConfigVendor.mk
common/scripts/: Android.mk
data/radish/: config.h  radish.c
diag/src/: Android.mk  diag_lsm.c  diag_lsm_msg.c
fastmmi/: mmi.mk
fastmmi/libmmi/: common.h
fastmmi/mmi/: Android.mk  draw.cpp  input.cpp
gps/etc/: Android.mk
gps/framework/native/framework-glue/: Android.mk  Makefile.am  configure.ac
gps/framework/native/framework-glue/common/inc/internal/: OSFramework.h  Subscription.h
gps/framework/native/framework-glue/common/src/: LocationProviderGlue.cpp  OSFramework.cpp  OSNPGlue.cpp  Subscription.cpp
gps/framework/native/framework-glue/jni/inc/: utils_jni.h
gps/framework/native/framework-glue/jni/src/: FlpServiceProvider_jni.cpp  IzatProviderEngine_jni.cpp  OSNPGlue_jni.cpp
gps/framework/native/lcp/: Android.mk  Makefile.am
gps/framework/native/lcp/data-items/: Android.mk  Makefile.am  configure.ac  data-items.pc.in  data-items_git.bb
gps/framework/native/lcp/data-items/src/: DataItemConcreteTypes.cpp  DataItemCopierConcreteTypes.cpp  DataItemDeSerializerConcreteTypes.cpp  DataItemSerializerConcreteTypes.cpp  DataItemStringifierConcreteTypes.cpp
gps/framework/native/lcp/izat-location-listeners/inc/internal/: IzatPassiveLocationListener.h
gps/framework/native/lcp/izat-location-listeners/src/: IzatPassiveLocationListener.cpp
gps/framework/native/lcp/izat-provider-service/inc/: ILocationProvider.h
gps/framework/native/lcp/izat-provider-service/inc/internal/: ComboNetworkProvider.h  IzatManager.h  LocationProvider.h  OSNPProxy.h
gps/framework/native/lcp/izat-provider-service/src/: ComboNetworkProvider.cpp  GTPWWanProxy.cpp  GTPWiFiProxy.cpp  IzatManager.cpp  LocationProvider.cpp  OSNPProxy.cpp  QNP.cpp  ZppProxy.cpp
gps/framework/native/lcp/izat_api/: IzatLocation.h  IzatRemoteApi.cpp  IzatRequest.h  IzatTypes.h  Makefile.am  configure.ac  izat_remote_api.cpp
gps/framework/native/lcp/observers/FreeWifiScanObserver/src/: FreeWifiScanObserver.cpp
gps/framework/native/lcp/observers/IPCClient/src/: IPCClient.cpp
gps/framework/native/lcp/observers/IPCHandler/src/: IPCHandler.cpp
gps/framework/native/lcp/observers/OSObserver/inc/internal/: OSObserver.h
gps/framework/native/lcp/observers/OSObserver/src/: OSObserver.cpp
gps/framework/native/lcp/observers/common/src/: ClientIndex.cpp  DataItemIndex.cpp
gps/framework/native/lcp/utils/inc/internal/: Utils.h
gps/framework/native/lcp/utils/src/: Utils.cpp
gps/framework/native/lcp/wiper/src/: Wiper.cpp
gps/garden-app/: configure.ac
gps/garden-app/GARDEn/: Android.mk  Makefile.am  fake_android_runtime.cpp  fake_vzw_jni_bridage.cpp  garden_app_session_tracker.cpp  garden_app_session_tracker.h  location_callbacks_garden.h  test_android_gps.cpp  test_android_gps.h
gps/garden-app/GARDEn/android_runtime/: AndroidRuntime.h
gps/garden-app/garden-test-interfaces/: configure.ac
gps/garden-app/garden-test-interfaces/src/: location_test_interface_base.h
gps/garden-app/loc-hal-test-shim/: configure.ac
gps/garden-app/loc-hal-test-shim/src/: Makefile.am  location_test_interface_android_gps.cpp  location_test_interface_android_gps_extended.cpp
gps/launcher/: Android.mk  Makefile.am  configure.ac  process_launcher.c  start_loc_launcher
gps/location-xtra/: Makefile.am  configure.ac  loc-xtra.pc.in
gps/slim/: Android.mk  Makefile.am  configure.ac
gps/slim/apss/daemon/: SlimDaemonManager.cpp
gps/slim/client/: configure.ac  slim-client.pc.in
gps/slim/client/src/: Makefile.am  SlimProxy.cpp  SlimProxyConnection.cpp
gps/slim/provider/common/: SlimProviderConf.cpp
gps/slim/provider/vnw/: CanFrameEvent.h  VehicleNetworkConfiguration.cpp  VehicleNetworkConfiguration.h  VehicleNetworkMessageProcessor.cpp  VehicleNetworkMessageProcessor.h  VehicleNetworkProvider.cpp  VehicleNetworkProvider.h
gps/slim/utils/: configure.ac  slim-utils.pc.in
gps/slim/utils/inc/: slim_processor.h
gps/slim/utils/src/: Makefile.am  slim_log_utils.c
gps/ulp2/: configure.ac
mdm-helper/: Android.mk  mdm_helper.c
mm-camera/: Android.mk
mm-osal/: Android.mk
mm-still/: Android.mk
nqnfc-firmware/: libnfc-qrd_default.conf  libnfc-qrd_rf1.conf
prebuilt_HY11/: AU_INFO.txt  Android.mk
qdssagent/: qdss.agent.sh  qdss.config.sh  qdss.functions.sh
scve/: Android.mk
thermal-engine/: Android.mk  Makefile.am  configure.ac  pid-data.c  pid_algorithm.c  speaker_cal-data.c  ss-data.c  ss_algorithm.c  thermal-engine.mk  thermal.c  thermal_config_v2.c  thermal_monitor-data-8916.c  thermal_monitor-data.c  thermal_monitor.c  thermal_util.c
thermal-engine/client/: thermal_client.c
thermal-engine/devices/: devices-qmi.c  devices.c  devices_actions.c  devices_actions.h  devices_manager.c
thermal-engine/inc/: devices_manager.h  thermal.h
thermal-engine/sensors/: sensor-virtual-data.c  sensors-qmi.c  sensors-thermal.c  sensors-tsens.c  sensors.c  sensors_manager.c  sensors_manager_internal.h
thermal-engine/server/: thermal_lib_common.h  thermal_server.c
time-services/: Android.mk  localdefs.h  time_daemon_qmi.c  time_genoff_i.h
ultrasound/: Android.mk
vpp/: common.mk
(+2044 files in other folders)
