# Makefile.am - Automake script for gps location-service
#

AM_CFLAGS = \
     $(LOCPLA_CFLAGS) \
     $(LOC_CFLAGS) \
     $(LOCATIONCORE_CFLAGS) \
     $(LOWICLIENT_CFLAGS) \
     $(LOCBASEUTIL_CFLAGS) \
     $(IZATCORE_CFLAGS) \
     -I../service \
     -I../adapter \
     -I./izat_api  \
     -I../lcp/data-items/inc  \
     -I./observers/common/inc  \
     -I./observers/common/inc/internal \
     -I./observers/IPCHandler/inc \
     -I./observers/IPCHandler/inc/internal \
     -I./observers/IPCClient/inc \
     -I./observers/IPCClient/inc/internal \
     -I./observers/OSObserver/inc \
     -I./observers/OSObserver/inc/internal \
     -I./observers/FreeWifiScanObserver/inc \
     -I./observers/FreeWifiScanObserver/inc/internal \
     -I./izat-provider-service/inc \
     -I./izat-provider-service/inc/internal \
     -I./izat-location-listeners/inc \
     -I./izat-location-listeners/inc/internal \
     -I./ipc-messaging-proxy/inc \
     -I./ipc-messaging-proxy/inc/internal \
     -I./utils/inc \
     -I./utils/inc/internal \
     -I./wiper/inc \
     -I./wiper/inc/internal \
	 -D__func__=__PRETTY_FUNCTION__ \
     -DON_TARGET_TEST

ACLOCAL_AMFLAGS = -I m4

liblocationservice_la_SOURCES = \
        ../adapter/LBSAdapter.cpp \
        ../service/loc_extended.cpp \
        observers/common/src/ClientIndex.cpp \
        observers/common/src/DataItemIndex.cpp \
        observers/common/src/IndexFactory.cpp \
        observers/IPCClient/src/IPCClient.cpp \
        observers/IPCHandler/src/IPCHandler.cpp \
        observers/OSObserver/src/OSObserver.cpp \
        observers/FreeWifiScanObserver/src/FreeWifiScanObserver.cpp \
        izat-provider-service/src/LocationProvider.cpp \
        izat-provider-service/src/IzatManager.cpp \
        izat-provider-service/src/ComboNetworkProvider.cpp \
        izat-provider-service/src/QNP.cpp \
        izat-provider-service/src/GTPWiFiProxy.cpp \
        izat-provider-service/src/GTPWWanProxy.cpp \
        izat-provider-service/src/ZppProxy.cpp \
        izat-provider-service/src/OSNPProxy.cpp \
        izat-location-listeners/src/IzatPassiveLocationListener.cpp \
        izat-location-listeners/src/XtraSubscriber.cpp \
        wiper/src/Wiper.cpp \
        utils/src/Utils.cpp

if USE_GLIB
liblocationservice_la_CFLAGS = -DUSE_GLIB $(AM_CFLAGS) @GLIB_CFLAGS@
liblocationservice_la_LDFLAGS = -lstdc++ -lpthread @GLIB_LIBS@ -shared -version-info 1:0:0
liblocationservice_la_CPPFLAGS = -DUSE_GLIB $(AM_CFLAGS) $(AM_CPPFLAGS) @GLIB_CFLAGS@
else
liblocationservice_la_CFLAGS = $(AM_CFLAGS)
liblocationservice_la_LDFLAGS = -lpthread -shared -version-info 1:0:0
liblocationservice_la_CPPFLAGS = $(AM_CFLAGS) $(AM_CPPFLAGS)
endif

liblocationservice_la_LIBADD = -lstdc++ $(LOCPLA_LIBS) $(LOC_LIBS)  $(LOWICLIENT_LIBS) $(LBSCORE_LIBS) $(LOCBASEUTIL_LIBS) $(LOCMQCLIENT_LIBS) $(LOCATIONCORE_LIBS) $(ULP2_LIBS) ./data-items/libdataitems.la

library_include_HEADERS = \
    ../service/ulp_service.h \
    ../service/loc_extended.h \
    ../adapter/LBSAdapter.h \
    ../geofence/GeoFencerProxyMsgs.h \
    izat_api/IIzatManager.h \
    izat_api/IDataItemSubscription.h     \
    izat_api/IDataItemQuery.h \
    izat_api/IDataItemObserver.h     \
    izat_api/IOSFramework.h \
    izat_api/IzatLocation.h \
    izat_api/IOSLocationProvider.h \
    izat_api/IIzatLocationListener.h \
    izat_api/IOSLocationListener.h \
    izat_api/IzatTypes.h \
    izat_api/IzatRequest.h \
    izat_api/IRawCommandInjector.h \
    izat_api/IOSFrameworkCleaner.h \
    utils/inc/IzatDefines.h

library_includedir = $(pkgincludedir)

#Create and Install libraries
lib_LTLIBRARIES = liblocationservice.la


